# copland

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml
src/: bin.rs  duration.rs  error.rs  fraction.rs  has_semitones.rs  leaf.rs  lib.rs  multiplier.rs  note.rs  regression_data_streamer.rs  rest.rs  spacer.rs  to_lilypond.rs  tuplet.rs
src/attachment/: attachable.rs  direction.rs  mod.rs  position.rs  tests.rs
src/chord/: mod.rs  tests.rs
src/container/: containable.rs  mod.rs  tests.rs
src/duration/: lilypond.rs  mod.rs  ops.rs  tests.rs
src/duration/tests/: regression_data_loaders.rs
src/generators/rhythm/: fill.rs  mod.rs
src/interval/: interval_size.rs  mod.rs  polarity.rs  quality.rs  quartertone.rs  tests.rs
src/interval/interval_class/: mod.rs  tests.rs
src/lilypond/: file.rs  mod.rs  to_lilypond.rs
src/notehead/: accidental_display.rs  mod.rs
src/pitch/: accidental.rs  diatonic_pitch_class.rs  mod.rs  octave.rs  pitch_class.rs  tests.rs
src/pitch/pitch_class/: mod.rs  tests.rs
src/score/: mod.rs  rhythmic_staff.rs  staff.rs  staff_group.rs  tests.rs  voice.rs
src/score_object/: contexts.rs  has_context.rs  indexed.rs  is_simultaneous.rs  mod.rs  named.rs  tests.rs
