[package]
name = "copland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "copland"
path = "src/lib.rs"

[[bin]]
name = "copland"
path = "src/bin.rs"

[dependencies]
itertools = "0.10.5"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"

[dev-dependencies]
futures-util = "0.3.14"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "*"
