[package]
name = "copland"
description = "A library for generating macro and micro structure for musical scores, and the resulting Lilypond output."
version = "0.1.0"
edition = "2021"
categories = ["data-structures", "mathematics", "simulation"]
keywords = ["music", "generative", "library"]
license = "MIT"
repository = "https://github.com/mikowitz/copland"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "copland"
path = "src/lib.rs"

[[bin]]
name = "copland"
path = "src/bin.rs"

[dependencies]
itertools = "0.10.5"
num = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"

[dev-dependencies]
futures-util = "0.3.14"
reqwest = { version = "0.11.3", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
